--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -45,6 +45,7 @@ html {
 
 body {
   margin: 0;
+  color:#888888;
   background:url(../images/fond.jpg);
 }
 
@@ -307,7 +308,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #333333;
+  color: #dddddd;
   background-color: #ffffff;
 }
 
@@ -7118,25 +7119,72 @@ td.visible-print {
   }
 }
 
-#Prez{color:030303;
-}
-#lot{
-color:#AA2222;
+#Prez{
+	color:030303;
+	min-width:1000px;
 }
 
 #tache{
-color:#22AA22;
+	color:white;
+	width:50px;
+	margin-left:5px;
+	float:left;
+	background-color:#077000;
+}
+
+#lot{
+	color:white;
+	width:50px;
+	margin-left:5px;
+	display:inline;
+	background-color:#985589;
 }
 
 #sousprojet{
-color:#2222AA;
+	color:white;
+	display:inline;
+	width:50px;
+	margin-left:5px;
+	background-color:#077000;
 }
 
 #jalons{
+	display:inline;
+	color:white;
+	width:50px;
+	margin-left:5px;
+	background-color:#985589;
 }
 
 #phase{
+	display:inline;
+	color:white;
+	width:50px;
+	margin-left:5px;
+	background-color:#077000;
 }
 
 #livrable{
+	display:inline;
+	color:white;
+	min-width:50px;
+	max-width:50px;
+	margin-left:5px;
+	background-color:#985589;
+}
+
+#bloc_central
+{
+	min-width : 300px;
+	width : 500px;
+	text-align : center;
+	margin-left : 30%;
+	margin-top : 250px;
+}
+
+.btn 
+{
+	-moz-box-shadow: 0 0 1px 1px #888;
+	-webkit-box-shadow: 0 0 1px 1px #888;
+	box-shadow: 0 0 1px 1px #888;
 }
